fix uncapped window width, fix infinite marquee whitespace for longer window
previously, windows were able to be dragged outside of the viewport width. this is now resolved, as the window width is locked to the viewport width.

--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ html {
 
 .scrolling-track {
     display: inline-flex;
-    animation: scroll-left 20s linear infinite;
+    animation: scroll-left 40s linear infinite;
 }
 
 .scrolling-track span {
